--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Excel File</title>
+    <title>Submit JSON/CSV Data</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        form { margin-bottom: 20px; }
+        input[type="text"], input[type="file"] { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #ccc; }
+        button { padding: 10px 15px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        button:hover { background-color: #218838; }
+        .success { color: green; }
+        .error { color: red; }
+    </style>
 </head>
 <body>
-    <h1>Update Excel File with JSON/CSV Data</h1>
+    <h1>Submit JSON/CSV Data</h1>
     <form id="dataForm">
-        <label for="dataInput">Paste your JSON/CSV data here:</label><br>
-        <textarea id="dataInput" name="dataInput" rows="10" cols="50" required></textarea><br>
-        <input type="submit" value="Update Excel">
+        <input type="file" id="fileInput" accept="application/json,text/csv" required />
+        <button type="submit">Submit</button>
     </form>
+    <div id="message" class="success" style="display:none;"></div>
     <script>
         document.getElementById('dataForm').onsubmit = function(event) {
-            event.preventDefault(); // Prevent form submission
-            const inputData = document.getElementById('dataInput').value;
-            // Here, add logic to handle the JSON/CSV data and update the Excel file
-            console.log('Data submitted:', inputData);
+            event.preventDefault();
+            const fileInput = document.getElementById('fileInput');
+            if (fileInput.files.length === 0) {
+                displayMessage('Please select a file.', 'error');
+                return;
+            }
+            // Assuming further processing of the file goes here.
+            displayMessage('File submitted successfully!', 'success');
         };
+
+        function displayMessage(message, type) {
+            const messageDiv = document.getElementById('message');
+            messageDiv.textContent = message;
+            messageDiv.className = type;
+            messageDiv.style.display = 'block';
+        }
     </script>
 </body>
 </html>
